--- a/.github/workflows/create_rds.yml
+++ b/.github/workflows/create_rds.yml
@@ -84,7 +84,7 @@ jobs:
 
     - name: Terraform Init
 
-      run: terraform init
+      run: terraform init -reconfigure
  
     - name: Terraform Format
 
