--- a/.github/workflows/delete_rds.yml
+++ b/.github/workflows/delete_rds.yml
@@ -7,8 +7,8 @@ on:
         required: true
         default: 'Delete'
       
-      rds_id:
-        description: 'RDS instance Id'
+      db_identifier:
+        description: 'RDS DB Identifier'
         required: true
 
       region:
@@ -50,9 +50,9 @@ jobs:
         uses: hashicorp/setup-terraform@v1
 
       - name: Terraform Init
-        working-directory: ./create_rds
+        working-directory: ./delete_rds
         run: terraform init
 
       - name: Terraform Destroy
-        working-directory: ./create_rds
-        run: terraform destroy -var action=${{ github.event.inputs.action }} -var rds_id=${{ github.event.inputs.rds_id }} -var region=${{ github.event.inputs.region }} -auto-approve
+        working-directory: ./delete_rds
+        run: terraform destroy -var action=${{ github.event.inputs.action }} -var db_identifier=${{ github.event.inputs.db_identifier }} -var region=${{ github.event.inputs.region }} -auto-approve
